# C_8practic

./: CMakeLists.txt
src/: main.c
src/models/: game.c  game.h
src/services/: game-service.c  game-service.h
src/utils/: console.c  console.h
